--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -161,6 +161,8 @@
     "SoloConstructTypePage.instruction": "Erstellst du einen Charakter oder ein Raumschiff?",
     "SoloConstructTypePage.starship": "Raumschiff",
 
+    "SoloEducationDetailsPage.selectThree": "(Drei auswählen)",
+
     "SoloEnvironmentDetailsPage.speciesText": "Unter welchen Spezies ist der Charakter aufgewachsen?",
 
     "SoloEnvironmentPage.settings": "Einstellungen",
@@ -353,29 +355,22 @@
     "Construct.system.structure": "Hülle",
     "Construct.system.weapons": "Waffen",
 
-    "Page.title.home": "Startseite",
-    "Page.title.era": "Ära",
-    "Page.title.talentsOverview": "Talente im Überblick",
     "Page.title.career": "Karriere",
+    "Page.title.characterType": "Art des Charakters",
     "Page.title.creditsPage": "Danksagungen",
+    "Page.title.customSpaceframe": "Eigene Klasse erstellen",
+    "Page.title.customSpeciesDetails": "Details zur selbst erschaffenen Spezies",
     "Page.title.environment": "Herkunft",
     "Page.title.environmentDetails": "Details über die Herkunft",
-    "Page.title.finish": "Feinschliff",
-    "Page.title.customSpeciesDetails": "Details zur selbst erschaffenen Spezies",
-    "Page.title.viewSheet": "Bogen anzeigen",
-    "Page.title.supportingCharacter": "Nebencharakter",
-    "Page.title.characterType": "Art des Charakters",
-    "Page.title.systemGeneration": "System-Erschaffung",
-    "Page.title.sectorDetails": "Sektordetails",
-    "Page.title.starSystemDetails": "Details zum Sternensystem",
-    "Page.title.starshipToolSelection": "Auswahl der Raumschiff-Erschaffung",
-    "Page.title.toolSelection": "Werkzeug-Auswahl",
-    "Page.title.gamemasterTrackerPage": "NSC-Verwaltung",
-    "Page.title.customSpaceframe": "Eigene Klasse erstellen",
+    "Page.title.era": "Ära",
     "Page.title.finalStarshipDetails": "Finale Raumschiff-Details",
+    "Page.title.finish": "Feinschliff",
+    "Page.title.gamemasterTrackerPage": "NSC-Verwaltung",
+    "Page.title.home": "Startseite",
     "Page.title.missionPodSelection": "Auswahl Missionsmodul",
     "Page.title.missionProfileSelection": "Auswahl Missionsprofil",
     "Page.title.missionProfileTalentSelection": "Auswahl Missionsprofil-Talent",
+    "Page.title.sectorDetails": "Sektordetails",
     "Page.title.simpleStarship": "Vereinfachte Raumschifferschaffung",
     "Page.title.smallCraftStats": "Shuttle-Werte",
     "Page.title.soloConstructType": "Werkzeug-Auswahl",
@@ -385,6 +380,13 @@
     "Page.title.species": "Spezies",
     "Page.title.speciesDetails": "Details über die Spezies",
     "Page.title.starshipTalentSelection": "Raumschiff-Talente",
+    "Page.title.starSystemDetails": "Details zum Sternensystem",
+    "Page.title.starshipToolSelection": "Auswahl der Raumschiff-Erschaffung",
+    "Page.title.supportingCharacter": "Nebencharakter",
+    "Page.title.systemGeneration": "System-Erschaffung",
+    "Page.title.talentsOverview": "Talente im Überblick",
+    "Page.title.toolSelection": "Werkzeug-Auswahl",
+    "Page.title.viewSheet": "Bogen anzeigen",
     "Page.title.starshipTypeSelection": "Raumschiff-Typ",
     "Page.title.starshipWeaponsSelection": "Raumschiffwaffen",
     "Page.title.modificationTypeSelection": "Art der Änderung",
