--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -170,6 +170,10 @@
     "SoloEarlyOutlookDetailsPage.errorDiscipline": "Please select a discipline.",
     "SoloEarlyOutlookDetailsPage.errorFocus": "Please select a focus.",
 
+    "SoloEducationDetailsPage.selectThree": "(Select three)",
+    "SoloEducationDetailsPage.primaryDiscipline": "Primary",
+    "SoloEducationDetailsPage.secondaryDiscipline": "Secondary",
+
     "SoloEducationPage.instruction.alliedMilitary": "Outside of Starfleet, the Milky Way Galaxy hosts many other security and military organizations. Instead of a Starfleet or Klingon officer, you might choose to build a Captain’s Log story around a Bajoran freedom fighter, a member of the Andorian Imperial Guard, or a radically candid warrior of the Qowat Milat.\n\nAs an alternative to attending Starfleet Academy, to select the type of military training your character has received, choose from the options in the following table, or randomly select one.",
     "SoloEducationPage.instruction.ambassadorDiplomat": "Ambassadorial characters are often found accompanying Starfleet vessels, and in other groups and situations conducive to telling exciting stories. These characters don’t necessarily have Starfleet training, but by necessity they are well-trained and well-informed, and quite capable of taking part in dangerous missions when necessary.\n\nDiplomat characters do not necessarily hold an active Starfleet rank or other military rank (though many well-known diplomats are retired Starfleet military).\n\nTo select your character’s diplomatic training, choose one of the types in the following table or randomly select one.",
     "SoloEducationPage.instruction.civilian": "Civilian characters are known to become involved in adventures great and small throughout the Star Trek universe, from ambassador Sarek’s strategic negotiations to the discovery of the U.S.S. Protostar by a roguish Dal R’El. Building a Captain’s Log story around a civilian character offers a chance to shine a light on life outside of Starfleet.\n\nCivilian characters hold no Starfleet rank or other military rank, though they may be granted an honorary rank.\n\nTo select your character’s civilian training, choose one of the types in the following matrix, or randomly select one.",
@@ -380,40 +384,41 @@
     "Construct.system.structure": "Structure",
     "Construct.system.weapons": "Weapons",
 
-    "Page.title.home": "Home",
-    "Page.title.era": "Era",
-    "Page.title.talentsOverview": "Talents Overview",
     "Page.title.career": "Career",
+    "Page.title.characterType": "Character Type",
     "Page.title.creditsPage": "Credits",
+    "Page.title.customSpaceframe": "Custom Spaceframe Creation",
+    "Page.title.customSpeciesDetails": "Custom Species Details",
     "Page.title.environment": "Environment",
     "Page.title.environmentDetails": "Environment Details",
-    "Page.title.finish": "Finishing Touches",
-    "Page.title.customSpeciesDetails": "Custom Species Details",
-    "Page.title.viewSheet": "View Sheet",
-    "Page.title.supportingCharacter": "Supporting Character",
-    "Page.title.characterType": "Character Type",
-    "Page.title.systemGeneration": "System Generation",
-    "Page.title.sectorDetails": "Sector Details",
-    "Page.title.soloEarlyOutlook": "Early Outlook",
-    "Page.title.soloEarlyOutlookDetails": "Early Outlook Details",
-    "Page.title.starSystemDetails": "Star System Details",
-    "Page.title.starshipToolSelection": "Starship Tool Selection",
-    "Page.title.toolSelection": "Tool Selection",
-    "Page.title.gamemasterTrackerPage": "Tracking",
-    "Page.title.customSpaceframe": "Custom Spaceframe Creation",
+    "Page.title.era": "Era",
     "Page.title.finalStarshipDetails": "Final Starship Details",
+    "Page.title.finish": "Finishing Touches",
+    "Page.title.gamemasterTrackerPage": "Tracking",
+    "Page.title.home": "Home",
     "Page.title.missionPodSelection": "Mission Pod Selection",
     "Page.title.missionProfileSelection": "Mission Profile Selection",
     "Page.title.missionProfileTalentSelection": "Mission Profile Talent",
+    "Page.title.sectorDetails": "Sector Details",
     "Page.title.simpleStarship": "Simplified Starship Creation",
     "Page.title.smallCraftStats": "Small Craft Stats",
     "Page.title.soloConstructType": "Tool Selection",
+    "Page.title.soloEarlyOutlook": "Early Outlook",
+    "Page.title.soloEarlyOutlookDetails": "Early Outlook Details",
+    "Page.title.soloEducation": "Education",
     "Page.title.sourceSelection": "Sources",
     "Page.title.spaceframeOption": "Spaceframe Option",
     "Page.title.spaceframeSelection": "Spaceframe",
     "Page.title.species": "Species",
     "Page.title.speciesDetails": "Species Details",
     "Page.title.starshipTalentSelection": "Starship Talents",
+    "Page.title.starSystemDetails": "Star System Details",
+    "Page.title.starshipToolSelection": "Starship Tool Selection",
+    "Page.title.supportingCharacter": "Supporting Character",
+    "Page.title.systemGeneration": "System Generation",
+    "Page.title.talentsOverview": "Talents Overview",
+    "Page.title.toolSelection": "Tool Selection",
+    "Page.title.viewSheet": "View Sheet",
     "Page.title.starshipTypeSelection": "Starship Type",
     "Page.title.starshipWeaponsSelection": "Starship Weapons",
     "Page.title.modificationTypeSelection": "Modification Type",
