--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -89,6 +89,8 @@
 
     "ReputationChangePage.instruction": "Ajustez la réputation du personnage le cas échéant",
 
+    "SoloEducationDetailsPage.selectThree": "(Choisir trois)",
+
     "SpaceframeOptionPage.text": "Voulez vous un modèle standart ou un modèle personalisé?",
 
     "SpaceframeOptionPage.button.standardSpaceframe": "Modèle Standart",
@@ -236,29 +238,22 @@
     "Construct.system.structure": "Structure",
     "Construct.system.weapons": "Armes",
 
-    "Page.title.home": "Page d'accueil",
-    "Page.title.era": "Ère",
-    "Page.title.talentsOverview": "Vue d'ensemble des talents",
     "Page.title.career": "Carrière",
+    "Page.title.characterType": "Type de personnage",
     "Page.title.creditsPage": "Crédits",
+    "Page.title.customSpaceframe": "Création de Modèle de Vaiseau",
+    "Page.title.customSpeciesDetails": "Détails de Race Personalisé",
     "Page.title.environment": "Environnement",
     "Page.title.environmentDetails": "Détails de l'Environnement",
-    "Page.title.finish": "Touches Finales",
-    "Page.title.customSpeciesDetails": "Détails de Race Personalisé",
-    "Page.title.viewSheet": "Voir la feuille",
-    "Page.title.supportingCharacter": "Personnage secondaire",
-    "Page.title.characterType": "Type de personnage",
-    "Page.title.systemGeneration": "Génération du système stellaire",
-    "Page.title.sectorDetails": "Détails du secteur",
-    "Page.title.starSystemDetails": "Détails du système stellaire",
-    "Page.title.starshipToolSelection": "Outils de vaisseau spatial",
-    "Page.title.toolSelection": "Selection d'Outil",
-    "Page.title.gamemasterTrackerPage": "Suivi",
-    "Page.title.customSpaceframe": "Création de Modèle de Vaiseau",
+    "Page.title.era": "Ère",
     "Page.title.finalStarshipDetails": "Détails Finaux du Vaisseau",
+    "Page.title.finish": "Touches Finales",
+    "Page.title.gamemasterTrackerPage": "Suivi",
+    "Page.title.home": "Page d'accueil",
     "Page.title.missionPodSelection": "Selection des Nacelles de Mission",
     "Page.title.missionProfileSelection": "Selection du Profil de Mission",
     "Page.title.missionProfileTalentSelection": "Talent du Profil de mission",
+    "Page.title.sectorDetails": "Détails du secteur",
     "Page.title.simpleStarship": "Creation de Vaisseau Simplifiée",
     "Page.title.smallCraftStats": "Navette",
     "Page.title.soloConstructType": "Selection d'Outil",
@@ -267,6 +262,13 @@
     "Page.title.species": "Espèce",
     "Page.title.speciesDetails": "Détail de l'Espèce",
     "Page.title.starshipTalentSelection": "Talents de Vaisseau",
+    "Page.title.starSystemDetails": "Détails du système stellaire",
+    "Page.title.starshipToolSelection": "Outils de vaisseau spatial",
+    "Page.title.supportingCharacter": "Personnage secondaire",
+    "Page.title.systemGeneration": "Génération du système stellaire",
+    "Page.title.talentsOverview": "Vue d'ensemble des talents",
+    "Page.title.toolSelection": "Selection d'Outil",
+    "Page.title.viewSheet": "Voir la feuille",
     "Page.title.starshipTypeSelection": "Type de Vaisseau",
     "Page.title.starshipWeaponsSelection": "Armes de Vaisseau",
     "Page.title.modificationTypeSelection": "Type de modification",
