add ranks to final screen; solo character sheet

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -374,6 +374,7 @@
     "Page.title.simpleStarship": "Vereinfachte Raumschifferschaffung",
     "Page.title.smallCraftStats": "Shuttle-Werte",
     "Page.title.soloConstructType": "Werkzeug-Auswahl",
+    "Page.title.soloFinishingTouches": "Feinschliff",
     "Page.title.sourceSelection": "Quellen",
     "Page.title.spaceframeOption": "Schiffsklassen-Optionen",
     "Page.title.spaceframeSelection": "Schiffsklasse",
