--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -408,12 +408,18 @@
     "Page.title.simpleStarship": "Simplified Starship Creation",
     "Page.title.smallCraftStats": "Small Craft Stats",
     "Page.title.soloCareerEvent": "Career Event",
+    "Page.title.soloCareerEvent1": "Career Event 1",
+    "Page.title.soloCareerEvent2": "Career Event 2",
     "Page.title.soloCareerEventDetails": "Career Event Details",
+    "Page.title.soloCareerEventDetails1": "Career Event Details 1",
+    "Page.title.soloCareerEventDetails2": "Career Event Details 2",
     "Page.title.soloCareerLength": "Career Length",
     "Page.title.soloConstructType": "Tool Selection",
     "Page.title.soloEarlyOutlook": "Early Outlook",
     "Page.title.soloEarlyOutlookDetails": "Early Outlook Details",
     "Page.title.soloEducation": "Education",
+    "Page.title.soloFinishingTouches": "Finishing Touches",
+    "Page.title.soloFinal": "Final Details",
     "Page.title.sourceSelection": "Sources",
     "Page.title.spaceframeOption": "Spaceframe Option",
     "Page.title.spaceframeSelection": "Spaceframe",
