--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -257,6 +257,7 @@
     "Page.title.simpleStarship": "Creation de Vaisseau Simplifiée",
     "Page.title.smallCraftStats": "Navette",
     "Page.title.soloConstructType": "Selection d'Outil",
+    "Page.title.soloFinishingTouches": "Touches Finales",
     "Page.title.spaceframeOption": "Option de Modèle",
     "Page.title.spaceframeSelection": "Modèle de Vaisseau",
     "Page.title.species": "Espèce",
