--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -363,12 +363,18 @@ Page.title.sectorDetails,Sector Details,Sektordetails,Detalles del sector,Détai
 Page.title.simpleStarship,Simplified Starship Creation,Vereinfachte Raumschifferschaffung,,Creation de Vaisseau Simplifiée
 Page.title.smallCraftStats,Small Craft Stats,Shuttle-Werte,,Navette
 Page.title.soloCareerEvent,Career Event,,,
+Page.title.soloCareerEvent1,Career Event 1,,,
+Page.title.soloCareerEvent2,Career Event 2,,,
 Page.title.soloCareerEventDetails,Career Event Details,,,
+Page.title.soloCareerEventDetails1,Career Event Details 1,,,
+Page.title.soloCareerEventDetails2,Career Event Details 2,,,
 Page.title.soloCareerLength,Career Length,,,
 Page.title.soloConstructType,Tool Selection,Werkzeug-Auswahl,,Selection d'Outil
 Page.title.soloEarlyOutlook,Early Outlook,,,
 Page.title.soloEarlyOutlookDetails,Early Outlook Details,,,
 Page.title.soloEducation,Education,,,
+Page.title.soloFinishingTouches,Finishing Touches,Feinschliff,,Touches Finales
+Page.title.soloFinal,Final Details,,,
 Page.title.sourceSelection,Sources,Quellen,,
 Page.title.spaceframeOption,Spaceframe Option,Schiffsklassen-Optionen,,Option de Modèle
 Page.title.spaceframeSelection,Spaceframe,Schiffsklasse,,Modèle de Vaisseau
