- revisions to Xindi head; improvements to final attributes/disciplines section.

--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -168,6 +168,12 @@ SoloEnvironmentPage.settings,Settings,Einstellungen,,
 SoloEnvironmentPage.conditions,Conditions,Bedingungen,,
 SoloEnvironmentPage.anotherSpeciesWorld.attributeText,Based on species.,,,
 SoloEraSelectionPage.instruction,Select an era for your character or have one chosen randomly.,,,
+SoloFinishingTouchesPage.attributeNote_one,The point total includes {{count}} excess point that could not be automatically added to your attributes without exceeding maximum values.,,,
+SoloFinishingTouchesPage.attributeNote_other,The point total includes {{count}} excess points that could not be automatically added to your attributes without exceeding maximum values.,,,
+SoloFinishingTouchesPage.select,(Select {{count}}),,,
+SoloFinishingTouchesPage.errorAttributes,Please choose {{count}} attributes,,,
+SoloFinishingTouchesPage.errorDisciplines,Please choose {{count}} disciplines,,,
+SoloFinishingTouchesPage.errorValue,Please choose a value,,,
 SoloSpeciesPage.errorAttributes,Please select 3 attributes.,Bitte wähle 3 Attribute.,,
 SoloSpeciesPage.instruction,Select a species for your character or have one chosen randomly.,,,
 SpaceframeOptionPage.text,"Do you want a standard spaceframe, or a custom spaceframe?",Möchten Sie eine Standard-Schiffsklasse oder eine eigene Schiffsklasse?,,Voulez vous un modèle standart ou un modèle personalisé?
@@ -372,6 +378,7 @@ Page.title.soloCareerLength,Career Length,,,
 Page.title.soloConstructType,Tool Selection,Werkzeug-Auswahl,,Selection d'Outil
 Page.title.soloEarlyOutlook,Early Outlook,,,
 Page.title.soloEarlyOutlookDetails,Early Outlook Details,,,
+Page.title.soloEducationType,Education Type,,,
 Page.title.soloEducation,Education,,,
 Page.title.soloFinishingTouches,Finishing Touches,Feinschliff,,Touches Finales
 Page.title.soloFinal,Final Details,,,
@@ -676,6 +683,7 @@ Rank.lieutenantJG.name,Lieutenant J.G.,Lieutenant J.G.,,
 Rank.lieutenantJG.abbrev,Lt. (J.G.),Lt. (J.G.),,
 Rank.ensign.name,Ensign,Fähnrich,,
 Rank.ensign.abbrev,Ens.,Fr.,,
+Rank.other.name,Other,,,
 Rank.none.name,None,Ohne,,
 Rank.none.abbrev,,,,
 Rank.masterChiefPettyOfficer.name,Master Chief Petty Officer,Master Chief Petty Officer,,
