--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -201,6 +201,13 @@
 
     "SoloEraSelectionPage.instruction": "Select an era for your character or have one chosen randomly.",
 
+    "SoloFinishingTouchesPage.attributeNote_one": "The point total includes {{count}} excess point that could not be automatically added to your attributes without exceeding maximum values.",
+    "SoloFinishingTouchesPage.attributeNote_other": "The point total includes {{count}} excess points that could not be automatically added to your attributes without exceeding maximum values.",
+    "SoloFinishingTouchesPage.select": "(Select {{count}})",
+    "SoloFinishingTouchesPage.errorAttributes": "Please choose {{count}} attributes",
+    "SoloFinishingTouchesPage.errorDisciplines": "Please choose {{count}} disciplines",
+    "SoloFinishingTouchesPage.errorValue": "Please choose a value",
+
     "SoloSpeciesPage.errorAttributes": "Please select 3 attributes.",
     "SoloSpeciesPage.instruction": "Select a species for your character or have one chosen randomly.",
 
@@ -417,6 +424,7 @@
     "Page.title.soloConstructType": "Tool Selection",
     "Page.title.soloEarlyOutlook": "Early Outlook",
     "Page.title.soloEarlyOutlookDetails": "Early Outlook Details",
+    "Page.title.soloEducationType": "Education Type",
     "Page.title.soloEducation": "Education",
     "Page.title.soloFinishingTouches": "Finishing Touches",
     "Page.title.soloFinal": "Final Details",
@@ -782,6 +790,8 @@
 
     "Rank.ensign.name": "Ensign",
     "Rank.ensign.abbrev": "Ens.",
+
+    "Rank.other.name": "Other",
 
     "Rank.none.name": "None",
 
