--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -175,6 +175,9 @@
     "SoloEducationDetailsPage.selectThree": "(Select three)",
     "SoloEducationDetailsPage.primaryDiscipline": "Primary Discipline",
     "SoloEducationDetailsPage.secondaryDiscipline": "Secondary Disciplines",
+    "SoloEducationDetailsPage.errorDisciplines": "Please select one primary and two secondary disciplines.",
+    "SoloEducationDetailsPage.errorAttributes": "Please select three attributes.",
+    "SoloEducationDetailsPage.errorValue": "Please select a value.",
 
     "SoloEducationPage.instruction.alliedMilitary": "Outside of Starfleet, the Milky Way Galaxy hosts many other security and military organizations. Instead of a Starfleet or Klingon officer, you might choose to build a Captain’s Log story around a Bajoran freedom fighter, a member of the Andorian Imperial Guard, or a radically candid warrior of the Qowat Milat.\n\nAs an alternative to attending Starfleet Academy, to select the type of military training your character has received, choose from the options in the following table, or randomly select one.",
     "SoloEducationPage.instruction.ambassadorDiplomat": "Ambassadorial characters are often found accompanying Starfleet vessels, and in other groups and situations conducive to telling exciting stories. These characters don’t necessarily have Starfleet training, but by necessity they are well-trained and well-informed, and quite capable of taking part in dangerous missions when necessary.\n\nDiplomat characters do not necessarily hold an active Starfleet rank or other military rank (though many well-known diplomats are retired Starfleet military).\n\nTo select your character’s diplomatic training, choose one of the types in the following table or randomly select one.",
